--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^6.5.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scroll-motion": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
