logo/header/calendly

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bettermark",
+  "homepage": "http://bettermarketing.com.au/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
