--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scroll-motion": "^0.3.0"
   },
   "devDependencies": {
