--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "axios": "^1.1.3",
     "framer-motion": "^6.5.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
