--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "framer-motion": "^6.5.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
