--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hubspot/api-client": "^7.1.2",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "framer-motion": "^6.5.1",
